# sqlx_fetch_all_bench

./: .env  Cargo.toml  Dockerfile  docker-compose.yml
benches/: sqlx_fetch_all.rs
criterion/report/: index.html
criterion/sqlx_query/base/: benchmark.json  raw.csv
criterion/sqlx_query/new/: estimates.json  sample.json  tukey.json
criterion/sqlx_query/report/: index.html
criterion/sqlx_query_as/base/: tukey.json
criterion/sqlx_query_as/change/: estimates.json
criterion/sqlx_query_as/new/: benchmark.json  estimates.json  raw.csv  sample.json
criterion/sqlx_query_as/report/: index.html
criterion/tokio_postgres/base/: benchmark.json  estimates.json  raw.csv
criterion/tokio_postgres/new/: sample.json  tukey.json
criterion/tokio_postgres/report/: index.html
criterion/tokio_postgres_map/base/: benchmark.json  estimates.json  sample.json  tukey.json
criterion/tokio_postgres_map/new/: raw.csv
criterion/tokio_postgres_map/report/: index.html
